--- a/src/styles/components/home/projects.module.scss
+++ b/src/styles/components/home/projects.module.scss
@@ -12,11 +12,11 @@
 }
 
 .project-title {
-    font-size: 16px;
+    font-size: 28px;
 }
 
 .project-text {
-    font-size: 10px;
+    font-size: 20px;
 }
 
 .project-slider {
@@ -64,6 +64,7 @@
     display: flex;
     flex-direction: column;
     gap: 18px;
+    z-index: 1;
 }
 
 @media (prefers-reduced-motion: no-preference) {
