--- a/src/styles/components/home/welcome.module.scss
+++ b/src/styles/components/home/welcome.module.scss
@@ -2,7 +2,7 @@
 @import '../../globals.scss';
 
 .welcome-text {
-    font-size: 16px;
+    font-size: 24px;
     text-align: center;
     margin: 50px 80px;
     padding-top: 260px;
@@ -10,7 +10,7 @@
 
 .welcome-continue {
     color: $color-accent;
-    font-size: 16px;
+    font-size: 24px;
     text-align: center;
     display: block;
 }
